# shortcut_models_pytorch

./: .flake8  LICENSE  README.md  pyproject.toml
src/shortcut_models_pytorch/: math_utils.py  model.py
tests/: test_model.py
