[project]
name = "shortcut_models_pytorch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ethan Fahnestock", email = "ekf@mit.edu"},
]
dependencies = ["torch>=2.5.1", "torchvision>=0.20.1", "numpy>=2.1.3", "matplotlib>=3.9.2", "pandas>=2.2.3", "pytest>=8.3.3", "einops>=0.8.0", "ipykernel>=6.29.5"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
